<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kupchinskii.ruslan.armpullup.info">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin_double"
                    android:autoLink="web"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:text="@string/msg_site_info"
                    android:textSize="24dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:autoLink="email"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:text="@string/msg_translate_info"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/msg_translate_th_info"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_info_1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:text="@string/msg_translate_th_info_1"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_info_2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:text="@string/msg_translate_th_info_2"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_info_3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:text="@string/msg_translate_th_info_3"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_info_4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:text="@string/msg_translate_th_info_4"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_info_5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:text="@string/msg_translate_th_info_5"
                    android:textSize="18dp" />


            </LinearLayout>


        </ScrollView>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="0"
            android:background="@drawable/background_normal_red"
            android:onClick="OnClickClose"
            android:text="@string/title_close" />

    </LinearLayout>

</RelativeLayout>
