<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kupchinskii.ruslan.armpullup.endPrg">

    <LinearLayout
        android:id="@+id/prg_r"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <ProgressBar
            android:id="@+id/pbBusy"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:indeterminate="true" />

        <Button
            android:id="@+id/bt_close"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="left"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="0"
            android:background="@drawable/background_ring_red"
            android:gravity="center"
            android:onClick="OnClickClose"
            android:text="@string/title_close"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/prg_o"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="0"
            android:text="@string/msg_estim"
            android:textSize="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="5"
            android:background="@drawable/background_normal_green"
            android:onClick="OnClickEstim"
            android:text="@string/title_estim" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="3"
            android:background="@drawable/background_normal_blue"
            android:onClick="OnClickClose"
            android:text="@string/title_later" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:background="@drawable/background_normal_red"
            android:onClick="OnClickNoShowEstim"
            android:text="@string/title_noShowEstim" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/prg_p"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="0"
            android:text="@string/msg_pay"
            android:textSize="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="5"
            android:background="@drawable/background_normal_green"
            android:onClick="OnClickPay"
            android:text="@string/title_pay" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="3"
            android:background="@drawable/background_normal_blue"
            android:onClick="OnClickClose"
            android:text="@string/title_close" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:background="@drawable/background_normal_red"
            android:onClick="OnClickNoShowBuy"
            android:text="@string/title_noShowEstim" />

    </LinearLayout>


</RelativeLayout>
