<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kupchinskii.ruslan.armpullup.endWork">

    <LinearLayout
        android:id="@+id/day_finish"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_gravity="left"
                android:background="@drawable/background_ring_green"
                android:onClick="OnClickSend"
                android:text="@string/post_on" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
            </LinearLayout>

            <Button
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_gravity="right"
                android:background="@drawable/background_ring_blue"
                android:onClick="OnClickStatistics"
                android:text="@string/title_statistics" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/title_day_finish_msg"
            android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_gravity="left"
            android:background="@drawable/background_ring_red"
            android:onClick="OnClickClose"
            android:text="@string/title_ok" />
    </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/day_dayoff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/title_day_free_msg"
            android:textSize="20dp" />

        <Button
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="0"
            android:background="@drawable/background_ring_red"
            android:onClick="OnClickClose"
            android:text="@string/title_ok" />
    </LinearLayout>

</RelativeLayout>
